website/site-assets/site.css
/* ... */
.gd { color: #000000; background-color: #ffdddd } /* Generic.Deleted */
.ge { color: #000000; } /* Generic.Emph */
.gr { color: #aa0000 } /* Generic.Error */
.gh { color: #888 } /* Generic.Heading */
.gi { color: #000000; background-color: #ddffdd } /* Generic.Inserted */
.go { color: #888888 } /* Generic.Output */
.gp { color: #555555 } /* Generic.Prompt */
.gs { font-weight: bold } /* Generic.Strong */
.gu { color: #aaaaaa } /* Generic.Subheading */
.gt { color: #aa0000 } /* Generic.Traceback */
.kc { color: #0086b3; } /* Keyword.Constant */
.kd { color: #a71d5d; } /* Keyword.Declaration */
.kn { color: #000000; font-weight: bold } /* Keyword.Namespace */
.kp { color: #000000; font-weight: bold } /* Keyword.Pseudo */
.kr { color: #000000; font-weight: bold } /* Keyword.Reserved */
.kt { color: #795da3; } /* Keyword.Type */
.m { color: #009999 } /* Literal.Number */
.s { color: #df5000 } /* Literal.String */
.na { color: #a71d5d } /* Name.Attribute */
.nb { color: #0086B3 } /* Name.Builtin */
.nc { color: #795da3; } /* Name.Class */
.no { color: #a71d5d } /* Name.Constant */
.nd { color: #3c5d5d; font-weight: bold } /* Name.Decorator */
.ni { color: #800080 } /* Name.Entity */
.ne { color: #990000; font-weight: bold } /* Name.Exception */
.nf { color: #990000; font-weight: bold } /* Name.Function */
.nl { color: #990000; font-weight: bold } /* Name.Label */
.nn { color: #555555 } /* Name.Namespace */
.nt { color: #0086b3 } /* Name.Tag */
.nv { color: #a71d5d } /* Name.Variable */
.ow { color: #000000; font-weight: bold } /* Operator.Word */
.w { color: #bbbbbb } /* Text.Whitespace */
.mf { color: #009999 } /* Literal.Number.Float */
.mh { color: #009999 } /* Literal.Number.Hex */
.mi { color: #009999 } /* Literal.Number.Integer */
.mo { color: #009999 } /* Literal.Number.Oct */
.sb { color: #df5000 } /* Literal.String.Backtick */
.sc { color: #df5000 } /* Literal.String.Char */
.sd { color: #df5000 } /* Literal.String.Doc */
.s2 { color: #df5000 } /* Literal.String.Double */
.se { color: #df5000 } /* Literal.String.Escape */
.sh { color: #df5000 } /* Literal.String.Heredoc */
.si { color: #df5000 } /* Literal.String.Interpol */
.sx { color: #df5000 } /* Literal.String.Other */
.sr { color: #009926 } /* Literal.String.Regex */
.s1 { color: #df5000 } /* Literal.String.Single */
.ss { color: #990073 } /* Literal.String.Symbol */
.bp { color: #888 } /* Name.Builtin.Pseudo */
.vc { color: #a71d5d } /* Name.Variable.Class */
.vg { color: #a71d5d } /* Name.Variable.Global */
.vi { color: #a71d5d } /* Name.Variable.Instance */
.il { color: #009999 } /* Literal.Number.Integer.Long */


.language-css .k {
  color: #0086b3;
}
.language-css .nt {
  color: #63a35c;
}




/*body.open-sans {
  font-family: "open-sans";
}
.futura-pt {

}
.futura-pt p {
  font-family: "adelle";
}
.futura-pt h1, .futura-pt h2 {
  font-family: "futura-pt";
  text-transform: uppercase;
}
.futura-pt h3 {
  font-weight: bold;
}
*/


img {
  width: auto;
  max-width: 100%;
  height: auto;
  border: 0;
  object-fit: cover;
}


.video {
  width: 100%%;
  margin: 0 0 24px 0;
}
.video__container {
  position: relative;
  width: 100%;
  padding-bottom: 56.25%;
  padding-top: 35px;
  height: 0;
  overflow: hidden;
}
.video__container iframe {
  position: absolute;
  top:0;
  left: 0;
  width: 100%;
  height: 100%;
}
.video-desc {
  width: 100%;
  max-width: 740px;
  margin: 12px auto;
}


p {
  margin: 0 0 12px;
}
ul {
  list-style: disc;
}
ul, ol {
  padding: 0;
  margin: 0 0 12px 25px;
}
li {
  margin: 0 0 12px 0;
}
h1, h2, h3, h4, h5, h6 {
  margin: 0;
  font-weight: normal;
}


h1 {
  font-size: 48px;
  line-height: 1;
  margin: 0;
  font-weight: 600;
  margin-bottom: 6px;
}

.row--heading {
  position: relative;
}
.section--head p {
  text-align: left;
  font-size: 26px;
  line-height: 32px;
  margin-bottom: 24px;

   font-size: 19px;
  line-height: 29px;
  
}


.section--head .github-button {
  position: absolute;
  right:0;
  top:0;
}
.row--nav {
  text-align: center;
  font-size: 32px;
  line-height: 1.1; 
}
.navigation {
  width: 100%;
  background: #F7F7F7;
  position: relative;
  padding: 30px 0;
}
.navigation a {
  text-decoration: none;
  border-bottom: 1px solid #92ABCD;
}

a.twitter-nav-link {
  border: 0;
  margin: 0 0.2em;
}
.twitter-nav-link span {
  border-bottom: 1px solid #92ABCD;
}
.navigation a:hover,
.twitter-nav-link:hover span {
  border-bottom-color: #C00;
}
.twitter-nav-link:before {
  content: '';
  background: url('../test/twitter.svg');
  display: inline-block;
  width: 0.8em;
  height: 0.8em;
  background-size: 0.7em 0.7em;
  background-repeat: no-repeat;
  background-position: 0 0.1em;
  margin-right: 0.1em;
}




h2 {
  font-size: 32px;
  line-height: 1.1;
  margin-bottom: 12px;
  font-weight: 600;
}

h3 {
  font-size: 22px;
  line-height: 28px;
  margin: 0 0 8px 0;

  font-size: 18px;
  line-height: 24px;
  font-weight: 600;
}
strong {
  font-weight: 600;
}
span.highlight {
  background:rgb(246, 243, 226);
}
.title-block p {
    font-size: 22px;
  line-height: 28px;
  max-width: 600px;
  margin-bottom: 24px;

}

p, ul.text-list {
  color: #444;
}
.section--head p,
.title-block p {
  color: #666;
}




.title-block p {
  font-size: 19px;
  line-height: 29px;
}





.section {
  width: 100%;
  margin-top: 176px;
}
.docs {
  margin-top: 60px;
}
.section--head {
  margin: 0;
  background: #EEE;
  /*background: linear-gradient(180deg, #eee 0%,#fff 100%);*/
  padding: 132px 0;
}


.row {
  max-width: 1600px;
  margin: 24px auto;
  padding: 0 30px;
  position: relative;
}

.row--docs {
  max-width: 960px;
  padding-left: 210px;
}
.row--heading {
  margin-top: 0;
  margin-bottom: 0;
}
.row--footer {
  text-align: center;
  padding: 132px 0;
}
.row--wide {
  max-width: 1000px;
}
.row--video {
  max-width: 1160px;
}

.row--wide img {
  float: left;
  margin: 0 12px 12px 0;
  width: 200px;
}
img.img--with_border {
  border: 1px solid #DDD;
  border-radius: 2px;
}
.img-desc {
  margin-left: 212px;
}
/* ... */

